Started work on compiling with JDK 11.