@@ -27,22 +27,12 @@
         <module>anns-threadchecker</module>
         <module>r-interop</module>
     </modules>
-    
-    <dependencies>
-        <dependency>
-            <groupId>org.checkerframework</groupId>
-            <artifactId>jdk8</artifactId>
-            <version>2.10.0</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <!-- <maven.compiler.verbose>true</maven.compiler.verbose> -->
-        <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
     </properties>
 
     <build>
@@ -125,12 +115,22 @@
                                     <dependency>
                                         <groupId>org.checkerframework</groupId>
                                         <artifactId>checker-qual</artifactId>
-                                        <version>2.10.0</version>
+                                        <version>3.0.1</version>
                                     </dependency>
                                     <dependency>
                                         <groupId>org.checkerframework</groupId>
                                         <artifactId>checker</artifactId>
-                                        <version>2.10.0</version>
+                                        <version>3.0.1</version>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.bluej</groupId>
+                                        <artifactId>anns-threadchecker</artifactId>
+                                        <version>1.0-SNAPSHOT</version>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.bluej</groupId>
+                                        <artifactId>threadchecker</artifactId>
+                                        <version>1.0-SNAPSHOT</version>
                                     </dependency>
                                     <path>
                                         <groupId>org.bluej</groupId>
@@ -144,15 +144,14 @@
                                     </path>
                                 </annotationProcessorPaths>
                                 <compilerArgs>
-                                    <!-- location of the annotated JDK, which comes from a Maven dependency -->
-                                    <arg>-Xbootclasspath/p:${annotatedJdk}</arg>
+                                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                     <arg>-AskipDefs=records.grammar.|one.util.</arg>
                                     <arg>-Astubs=${project.basedir}/../stubs</arg>
                                     <arg>-Aunits=annotation.units.AbsColIndex,annotation.units.AbsRowIndex,annotation.units.GridAreaColIndex,annotation.units.GridAreaRowIndex,annotation.units.TableDataRowIndex,annotation.units.TableDataColIndex,annotation.units.RowOrColIndex,annotation.units.CanonicalLocation,annotation.units.DisplayLocation,annotation.units.RawInputLocation,annotation.units.DisplayPixels,annotation.units.VirtualPixels</arg>
                                     <arg>-Apropfiles=${project.basedir}/../app/src/main/resources/transformations_en.properties:${project.basedir}/../app/src/main/resources/expression_en.properties:${project.basedir}/../app/src/main/resources/function_en.properties:${project.basedir}/../app/src/main/resources/newcolumn_en.properties:${project.basedir}/../app/src/main/resources/dataentry_en.properties:${project.basedir}/../app/src/main/resources/main_en.properties:${project.basedir}/../app/src/main/resources/import_en.properties</arg>
                                     <arg>-Ahelpfiles=${project.basedir}/../app/src/main/help/agg-recipe.xml;${project.basedir}/../app/src/main/help/guess-format.xml;${project.basedir}/../app/src/main/help/edit-check.xml;${project.basedir}/../app/src/main/help/edit-column.xml;${project.basedir}/../app/src/main/help/edit-join.xml;${project.basedir}/../app/src/main/help/edit-r.xml;${project.basedir}/../app/src/main/help/edit-unit.xml;${project.basedir}/../app/src/main/help/split-by.xml</arg>
                                     <arg>-Afuncdocfiles=${project.basedir}/../app/src/main/funcdoc/boolean.xml;${project.basedir}/../app/src/main/funcdoc/comparison.xml;${project.basedir}/../app/src/main/funcdoc/conversion.xml;${project.basedir}/../app/src/main/funcdoc/core.xml;${project.basedir}/../app/src/main/funcdoc/datetime.xml;${project.basedir}/../app/src/main/funcdoc/list.xml;${project.basedir}/../app/src/main/funcdoc/listprocess.xml;${project.basedir}/../app/src/main/funcdoc/literals.xml;${project.basedir}/../app/src/main/funcdoc/lookup.xml;${project.basedir}/../app/src/main/funcdoc/math.xml;${project.basedir}/../app/src/main/funcdoc/number.xml;${project.basedir}/../app/src/main/funcdoc/operators.xml;${project.basedir}/../app/src/main/funcdoc/optional.xml;${project.basedir}/../app/src/main/funcdoc/text.xml</arg>
-                                    <arg>-AconservativeUninferredTypeArguments</arg>
+                                    <!-- <arg>-AconservativeUninferredTypeArguments</arg> -->
                                     <arg>-AsuppressWarnings=optional.parameter,optional.as.element.type,optional.collection</arg>
                                     <arg>-Xplugin:threadchecker.TCPlugin</arg>
                                     <arg>-Werror</arg>
@@ -199,12 +198,22 @@
                                     <dependency>
                                         <groupId>org.checkerframework</groupId>
                                         <artifactId>checker-qual</artifactId>
-                                        <version>2.10.0</version>
+                                        <version>3.0.1</version>
                                     </dependency>
                                     <dependency>
                                         <groupId>org.checkerframework</groupId>
                                         <artifactId>checker</artifactId>
-                                        <version>2.10.0</version>
+                                        <version>3.0.1</version>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.bluej</groupId>
+                                        <artifactId>anns-threadchecker</artifactId>
+                                        <version>1.0-SNAPSHOT</version>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.bluej</groupId>
+                                        <artifactId>threadchecker</artifactId>
+                                        <version>1.0-SNAPSHOT</version>
                                     </dependency>
                                     <path>
                                         <groupId>org.bluej</groupId>
@@ -219,12 +228,12 @@
                                 </annotationProcessorPaths>
                                 <compilerArgs>
                                     <!-- location of the annotated JDK, which comes from a Maven dependency -->
-                                    <arg>-Xbootclasspath/p:${annotatedJdk}</arg>
+                                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                     <arg>-AskipDefs=records.grammar.|one.util.</arg>
                                     <arg>-Astubs=${project.basedir}/../stubs</arg>
                                     <arg>-Aunits=annotation.units.AbsColIndex,annotation.units.AbsRowIndex,annotation.units.GridAreaColIndex,annotation.units.GridAreaRowIndex,annotation.units.TableDataRowIndex,annotation.units.TableDataColIndex,annotation.units.RowOrColIndex,annotation.units.CanonicalLocation,annotation.units.DisplayLocation,annotation.units.RawInputLocation,annotation.units.DisplayPixels,annotation.units.VirtualPixels</arg>
                                     <arg>-Xplugin:threadchecker.TCPlugin</arg>
-                                    <arg>-AconservativeUninferredTypeArguments</arg>
+                                    <!-- <arg>-AconservativeUninferredTypeArguments</arg> -->
                                     <arg>-Werror</arg>
                                 </compilerArgs>
                             </configuration>
